...
    }
    
    func displayResultAlert(title: String, message: String) {
        let alert = UIAlertController(title: title,
                                      message: message,
                                      preferredStyle: .alert)
        let action = UIAlertAction(title: "Сыграть ещё раз", style: .default) { [weak self] _ in
            self?.presenter.restartQuiz()
        }
        alert.addAction(action)
        present(alert, animated: true)
    }
    
...
